--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
   "dependencies": {
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/x-data-grid": "^4.0.0",
+    "@types/js-cookie": "^2.2.7",
     "@types/prop-types": "^15.7.4",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
+    "axios": "^0.21.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "5.0.0",
+    "js-cookie": "^3.0.0",
+    "material-table": "^1.69.3",
     "next": "^11.1.0",
     "next-compose-plugins": "2.2.1",
     "path": "0.12.7",
@@ -44,6 +50,8 @@
   },
   "devDependencies": {
     "@types/node": "^16.7.4",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.0"
   }
