--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "jsx": "preserve",
     "baseUrl": "./src",
     "paths": {
-      "@components/*": ["components/*"]
+      "@api": ["api.ts"],
+      "@auth": ["auth.tsx"],
+      "@util": ["util.ts"],
+      "@components/*": ["components/*"],
+      "@interface/*": ["interfaces/*"],
+      "@services/*": ["services/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
