--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/x-data-grid": "^4.0.0",
