--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.8.0",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
     "axios": "^0.21.1",
@@ -35,7 +36,8 @@
     "next-compose-plugins": "2.2.1",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.7",
