--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "material-table": "^1.69.3",
     "next": "^11.1.0",
     "next-compose-plugins": "2.2.1",
+    "node-rsa": "^1.1.1",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/js-cookie": "^2.2.7",
     "@types/node": "^16.7.4",
+    "@types/node-rsa": "^1.1.1",
     "@types/prop-types": "^15.7.4",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
