change domain url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plutus-fe",
-  "homepage": "https://plutus.nyxordinal.tech/",
+  "homepage": "https://plutus.nyxordinal.dev/",
   "version": "1.0.0",
   "description": "Plutus - Your free online companion for easy daily expense management",
   "repository": "https://github.com/nyxordinal/plutus-fe",
